Phone Call: Fix header overlapping with native buttons in Electron (follow-up) (#3750)

--- a/src/components/calls/group/GroupCall.module.scss
+++ b/src/components/calls/group/GroupCall.module.scss
@@ -166,6 +166,10 @@
   display: flex;
   align-items: center;
   padding: 0.375rem 0.875rem;
+
+  :global(body.is-electron) .root:not(.appFullscreen) & {
+    padding-left: 5rem;
+  }
 }
 
 .videosHeaderLastButton {
